--- a/assets/style/index.scss
+++ b/assets/style/index.scss
@@ -1,4 +1,5 @@
 @import "color";
+@import "markdown";
 @import './wash-painting-ui/lib/style.scss';
 @import '/node_modules/prismjs/themes/prism-tomorrow.css';
 @import "/node_modules/prismjs/plugins/toolbar/prism-toolbar.css";
