🧩 组件库改为依赖形式

--- a/assets/style/index.scss
+++ b/assets/style/index.scss
@@ -1,6 +1,6 @@
 @import "color";
 @import "markdown";
-@import './wash-painting-ui/lib/style.scss';
+@import '/node_modules/@higuaifan/wash-painting-ui/dist/style.css';
 @import '/node_modules/prismjs/themes/prism-tomorrow.css';
 @import "/node_modules/prismjs/plugins/toolbar/prism-toolbar.css";
 
