💄 添加水墨风的颜色和prism配置

--- a/assets/style/color.scss
+++ b/assets/style/color.scss
@@ -8,5 +8,11 @@ body{
   --w-color-warn: #E8B004;
   --w-color-success: #4A9992;
   --w-color-error: #861717;
+  --w-color-background: #0F142320;
+  --w-color-orange: #FCA104;
+  --w-color-green: #223E36;
+  --w-color-green2: #1A3B32;
+  --w-color-pink: #CC163A;
+  --w-color-blue: #1661AB;
 }
 
