--- a/assets/style/index.scss
+++ b/assets/style/index.scss
@@ -1,7 +1,7 @@
 @import "color";
 @import "markdown";
 @import '/node_modules/@higuaifan/wash-painting-ui/dist/style.css';
-@import '/node_modules/prismjs/themes/prism-tomorrow.css';
+@import 'prism';
 @import "/node_modules/prismjs/plugins/toolbar/prism-toolbar.css";
 
 * {
