--- a/assets/style/prism.scss
+++ b/assets/style/prism.scss
@@ -34,6 +34,7 @@ pre[class*="language-"] {
   padding: 1em;
   margin: .5em 0;
   overflow: auto;
+  border-radius: 2px;
 }
 
 :not(pre) > code[class*="language-"],
