--- a/assets/style/index.scss
+++ b/assets/style/index.scss
@@ -26,7 +26,7 @@ a {
   src: url(/fonts/wljh.ttf);
 }
 
-.wash-painting-ui {
+.shuimo-ui {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
@@ -34,7 +34,7 @@ a {
   top: 0;
 }
 
-.w-menu {
+.m-menu {
   font-family: wljh, serif;
   letter-spacing: 2px;
 }
